# BookReviewApp

./: README.md  alembic.ini  app.py  asgi.py  cache.py  config.py  database.py  flask_app.py  main.py  models.py  pyproject.toml  replit.md  schemas.py  start_server.py  test.db
alembic/: env.py
alembic/versions/: 001_initial_migration.py
attached_assets/: Pasted-Backend-Engineer-Technical-Assessment-Duration-2-Days-A-Take-Home-Exercise-2-Days-1-AP-1751130238043_1751130238044.txt
routes/: books.py  reviews.py
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_books.py  test_cache.py  test_reviews.py
